292 ==> 144176 - In right-click popup, large amounts of tags run off the screen and cannot be accesed.
293 ==> 249300 - Loss of IPTC tag "Country Name" importing pictures.
294 ==> 159855 - BUG - while appling tag changes.
295 ==> 270158 - Tag assigned to wrong photo.
296 ==> 158865 - Adding tags: redundant menu opening necessary.
297 ==> 149554 - Incorrect sorting among tags for non-english characters.
298 ==> 159919 - Tags hierarchy and parent/son auto-selection.
299 ==> 144179 - Tag hierarchy or popups is difficult to follow/understand.
300 ==> 309598 - "Recent Tags" menu show existing tags added and shouldn't be.
301 ==> 269341 - After removing Album, related tags still reside in taglist.
302 ==> 361438 - Dragging thumbnail to Tag produces wrong offer to tag.
303 ==> 284287 - THUMBBAR : after item deletion, scroll to the new current image.
304 ==> 343683 - Cropping may cause artifacts at image border.
305 ==> 365734 - digiKam crashes when clicking on the Table button, new installation.
306 ==> 338050 - MYSQL : nested set fields not updating when moving tag within hierarchy [patch].
307 ==> 281959 - SCAN : digiKam unresponsive for >1min after startup.
308 ==> 320359 - SCAN : digiKam should show which directories are scanned during start-up when adding collections after database deletion.
309 ==> 283323 - MYSQL : a new label "_Digikam_root_tag_" is created every time.
310 ==> 285683 - Already imported pictures not recognized after daylight savings time.
311 ==> 365876 - Adjust date/time menu entry missing (digikam 5).
312 ==> 237878 - SCHEMA : add foreign keys support.
313 ==> 364883 - Full screen view Mac-OSX menu at top is missing and digikam menu is doubled.
314 ==> 365409 - Toolbar + menubar disappeared.
315 ==> 365929 - Ctrl+M doesn't show/hide menu bar, only status bar.
316 ==> 345045 - MYSQL : images not displayed in album.
317 ==> 365907 - digikam timestamp not updated after use of Adjust Time.
318 ==> 