@@ -327,4 +327,5 @@ BUGFIXES FROM KDE BUGZILLA (https://www.digikam.org/changelog):
 315 ==> 365929 - Ctrl+M doesn't show/hide menu bar, only status bar.
 316 ==> 345045 - MYSQL : images not displayed in album.
 317 ==> 365907 - digikam timestamp not updated after use of Adjust Time.
-318 ==> 
+318 ==> 341112 - BQM Metadata Tool : removing Metadata from Batch Queue Manager modifies files.
+319 ==> 
